# p_queuing

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/p_queue/: app.py  utils.py  worker.py
